<?xml version="1.0"?>
<package format="3">
  <name>pc2_preprocessor</name>
  <version>0.1.0</version>
  <description>PointCloud2 preprocessing: voxel downsample, ground removal, 2D OccupancyGrid projection.</description>
  <maintainer email="ahn.avocado@gmail.com">avocado Ahn</maintainer>
  <author>Sukyum Ahn</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>

  
  <exec_depend>pcl_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
